# workday-sync

./: .gitignore  ARCHITECTURE.md  README.md  REQUIREMENTS.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/workday_sync/: __init__.py  cli.py  gcal_client.py  ics_builder.py  models.py  parser.py
tests/: conftest.py  test_cli.py  test_gcal_client.py  test_ics_builder.py  test_models.py  test_parser.py
