[project]
name = "workday-sync"
version = "0.2.0"
description = "Convert Workday absence requests to a Google Calendar ICS file"
readme = "README.md"
authors = [
    { name = "Jon Tutcher", email = "jon.tutcher@chainguard.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.1",
    "icalendar>=6.0",
    "openpyxl>=3.1",
    "pytz>=2024.1",
]

[project.scripts]
workday-sync = "workday_sync.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "freezegun>=1.5",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

# Install from GitHub Packages:
#   uv add workday-sync \
#     --index https://<username>:<token>@pypi.pkg.github.com/jon-tutcher
# or:
#   pip install workday-sync \
#     --index-url https://<username>:<token>@pypi.pkg.github.com/jon-tutcher
